[package]
name = "hyper-self-socketpair"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util = "0.3.17"
hyper = { version = "0.14.13", features = ["full"] }
openssl = "0.10.36"
tokio = { version = "1.12", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["io"] }
